Changed site title to lower case. Removed scripted page links from navbar.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 
 # Site settings
-title       : Adi Linden
+title       : "Adi Linden"
 description : "Reflections of a Wandering Mind"
 url         : http://adis.ca
 baseurl     : ""  # without trailing slash
