Added custom icon font.  Font generated on Fontello using Font Awesome icons. Changed footer from 3 column to just a plain footer with social icons and copyright.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   name      : Adi Linden
   bio       : "Networking, VMware, Unix professional; Electronics, amateur radio, programming geek; Photography enthusiast; Hobby cook and baker."
   thumb     : /resources/images/me_charcoal-120.jpeg
-  email     : adi57@adis.ca
+  email     : mailto:adi57@adis.ca
   github    : http://github.com/adilinden
   twitter   : http://twitter.com/adilinden
   facebook  : http://facebook.com/adilinden
