--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   email     : mailto:adi57@adis.ca
   github    : http://github.com/adilinden
   twitter   : http://twitter.com/adilinden
-  facebook  : http://facebook.com/adilinden
+  facebook  : http://facebook.com/ida.nednil
   linkedin  : http://ca.linkedin.com/in/adilinden
 
 # Build settings
